--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -12,7 +12,7 @@
 
   <header>
 
-    <img alt="Radancy" height="47" src="img/logo.png" width="200">
+    <img alt="Radancy" height="56" src="img/logo.png" width="240">
 
     <button aria-label="Reset Page" class="btn reset" id="btn-reset"></button>
 
@@ -38,7 +38,9 @@
 
           <div class="disclosure-multiple__content">
 
-            <p>Pages must always be validated. Errors in WAVE and HTML are the most critical issues to address. QA engineers should link directly to validation reports when logging issues.</p>
+            <h2>Overview</h2>
+
+            <p>Web pages must always be validated. Errors in WAVE and HTML are the most critical issues to address. QA engineers should link directly to validation reports when logging issues.</p>
 
             <ul>
               <li><a aria-label="WAVE (Opens in new tab)" href="https://wave.webaim.org/" id="validate-a11y" rel="noopener">Validate Accessibility</a></li>
