--- a/a11y/extension/outline.html
+++ b/a11y/extension/outline.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport">
+  <base target="_blank">
   <link href="init.css" rel="stylesheet">
   <link href="img/icon-32.png" rel="icon">
   <title>Radancy: Heading Outline</title>
@@ -11,7 +12,7 @@
 
   <header>
 
-    <img alt="Radancy" height="47" src="img/logo.png" width="200">
+    <img alt="Radancy" height="56" src="img/logo.png" width="240">
 
   </header>
 
