--- a/a11y/extension/heading.html
+++ b/a11y/extension/heading.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport">
-  <base target="_blank">
   <link href="init.css" rel="stylesheet">
   <link href="img/icon-32.png" rel="icon">
   <title>Radancy: Heading Outline</title>
@@ -18,9 +17,9 @@
 
   <main id="content">
 
-    <h1>Heading-Level Outline</h1>
+    <h1 id="primary-heading">Heading-Level Outline</h1>
 
-    <p>A webpage should strive to have a single <code>h1</code> element only and to avoid skipping headings. A logical heading structure is very important in understanding and navigating the page more easily. The search engines appear to like this, too.</p>
+    <p>A web page should strive to have a single <code>h1</code> element only and to avoid skipping headings. A logical heading structure is very important for <em>everybody</em> so that the page can be more easily understood and navigated. The search engines appear to like this, too.</p>
 
     <div id="inner-content">
 
