--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -115,13 +115,13 @@
       <h2>Test</h2>
 
       <ul>
-        <li><button data-script="a11y-smoketest-protanopia">Protanopia (No Red)</button></li>
-        <li><button data-script="a11y-smoketest-protanomaly">Protanomaly</button></li>
-        <li><button data-script="a11y-smoketest-deuteranopia">Deuteranopia (No Green)</button></li>
-        <li><button data-script="a11y-smoketest-deuteranomaly">Deuteranomaly</button></li>
-        <li><button data-script="a11y-smoketest-tritanopia">Tritanopia (No Blue)</button></li>
-        <li><button data-script="a11y-smoketest-achromatopsia">Achromatopsia</button></li>
-        <li><button data-script="a11y-smoketest-achromatomaly">Achromatomaly</button></li>
+        <li><button data-script="a11y-smoketest-protanopia" data-script-color>Protanopia (No Red)</button></li>
+        <li><button data-script="a11y-smoketest-protanomaly" data-script-color>Protanomaly</button></li>
+        <li><button data-script="a11y-smoketest-deuteranopia" data-script-color>Deuteranopia (No Green)</button></li>
+        <li><button data-script="a11y-smoketest-deuteranomaly" data-script-color>Deuteranomaly</button></li>
+        <li><button data-script="a11y-smoketest-tritanopia" data-script-color>Tritanopia (No Blue)</button></li>
+        <li><button data-script="a11y-smoketest-achromatopsia" data-script-color>Achromatopsia</button></li>
+        <li><button data-script="a11y-smoketest-achromatomaly" data-script-color>Achromatomaly</button></li>
       </ul>
 
       <form action="https://webaim.org/resources/linkcontrastchecker/" target="_blank">
@@ -536,6 +536,11 @@
   </main>
 
   <footer>
+
+    <ul>
+      <li><a class="new-tab" href="https://jira.tmp.com/browse/TCDQ-60657">Report Bug</a></li>
+      <li><a class="new-tab" href="thanks.html">Special Thanks</a></li>
+    </ul>
 
     <p><small>&copy; 2021 Radancy. An equal opportunity employer.</small></p>
 
