--- a/a11y/extension/thanks.html
+++ b/a11y/extension/thanks.html
@@ -5,7 +5,7 @@
   <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport">
   <link href="init.css" rel="stylesheet">
   <link href="img/icon-32.png" rel="icon">
-  <title>Heading-Level Outline - Accessibility Smoke Test</title>
+  <title>Special Thanks - Accessibility Smoke Test</title>
 </head>
 <body id="outline">
 
@@ -17,15 +17,14 @@
 
   <main id="content">
 
-    <h1 id="primary-heading">Heading-Level Outline</h1>
+    <h1>Special Thanks</h1>
 
-    <p>A web page should strive to have a single <code>h1</code> element only and to avoid skipping headings. A logical heading structure is very important for <em>everybody</em> so that the page can be more easily understood and navigated. The search engines appear to like this, too.</p>
+    <p>This extension would not be possible without the hard work of individuals who created many of the bookmarklets used in its creation. To these people...thank you.</p>
 
-    <div id="inner-content">
-
-      <p>Loading...</p>
-
-    </div>
+    <ul>
+      <li><a class="new-tab" href="https://pauljadam.com/bookmarklets.html">Paul J. Adams' Bookmarkets</a></li>
+      <li><a class="new-tab" href="https://github.com/mraccess77/mraccess77.github.io/tree/master/favlets">Jonathan Avila's Favlets</a></li>
+    </ul>
 
   </main>
 
