--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -5,7 +5,7 @@
   <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport">
   <link href="init.css" rel="stylesheet">
   <link href="img/icon-32.png" rel="icon">
-  <title>Radancy: Accessibility Smoke Test Extension</title>
+  <title>Accessibility Smoke Test Extension - Radancy</title>
 </head>
 <body id="index">
 
