--- a/a11y/extension/thanks.html
+++ b/a11y/extension/thanks.html
@@ -5,9 +5,9 @@
   <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport">
   <link href="init.css" rel="stylesheet">
   <link href="img/icon-32.png" rel="icon">
-  <title>Special Thanks - Accessibility Smoke Test</title>
+  <title>Special Thanks - Radancy</title>
 </head>
-<body id="outline">
+<body id="thanks">
 
   <header>
 
