--- a/a11y/extension/heading.html
+++ b/a11y/extension/heading.html
@@ -5,7 +5,7 @@
   <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport">
   <link href="init.css" rel="stylesheet">
   <link href="img/icon-32.png" rel="icon">
-  <title>Heading-Level Outline - Accessibility Smoke Test</title>
+  <title>Heading-Level Outline - Radancy</title>
 </head>
 <body id="outline">
 
