--- a/a11y/index.html
+++ b/a11y/index.html
@@ -6,6 +6,6 @@ title: "Accessibility at Radancy"
   <li><a href="https://amp.levelaccess.net/login.php">Level Access AMP</a></li>
   <li><a href="baseline">Radancy Accessibility Testing Baselines</a></li>
   <li><a href="extension">Radancy Accessibility Smoke Test Extension</a></li>
-  <li><a href="boilerplate">Radancy Testing Boilerplate</a></li>
+  <li><a href="testing/boilerplate">Radancy Testing Boilerplate</a></li>
   <li><a href="/ui/code-standards/">Radancy User Interface Standards and Guidelines</a></li>
 </ul>
