--- a/a11y/testing/boilerplate/index.html
+++ b/a11y/testing/boilerplate/index.html
@@ -1,9 +1,12 @@
 ---
 layout: null
 ---
-
+<!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport">
+  <meta content="noindex, nofollow" name="robots">
   <meta http-equiv="refresh" content="0; URL=https://docs.google.com/spreadsheets/d/1Ar2fbSmm236sIRqivwyKa9sCmF5z8SJAVwaum5KEwoQ/edit?usp=sharing">
   <title>Accessibility Testing Boilerplate</title>
 </head>
