--- a/support/index.html
+++ b/support/index.html
@@ -6,6 +6,10 @@ layout: null
 
 /* Temporary Styling */
 
+.text-contrast .headline--banner-alt {
+color: #000;
+}
+
 #rad-syndicate h2, #rad-syndicate h3 {
 font-weight: 600;
 }
