--- a/support/index.html
+++ b/support/index.html
@@ -30,7 +30,7 @@ margin-bottom: 3em;
 
 </style>
 
-<p class="effective-date">Last updated <time>March 1, 2021</time></p>
+<p class="effective-date">Last updated <time>April 21, 2021</time></p>
 
 <h2 id="web-standards">Web Standards</h2>
 
@@ -48,7 +48,7 @@ margin-bottom: 3em;
 
 <ul>
   <li>Windows 10</li>
-  <li>Windows 8/8.1</li>
+  <li>Windows 8/8.1 (Upon Request Only)</li>
   <li>macOS 10.15 (Catalina)</li>
   <li>iOS 14.x</li>
   <li>iOS 13.x</li>
@@ -105,6 +105,7 @@ margin-bottom: 3em;
 <h3 id="update-log">Update Log</h3>
 
 <ul>
+  <li><b>April 21, 2021</b> - Windows 8/8.1 now only supported by request.</li>
   <li><b>March 1, 2021</b> - iOS 14.x added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
   <li><b>March 1, 2021</b> - Android 11.x support added and Android 8.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
   <li><b>September 25, 2020</b> - Updated <a href="#email-support">Email Support</a>.</li>
