IE Limited Support

--- a/support/index.html
+++ b/support/index.html
@@ -100,7 +100,7 @@ margin-bottom: 3em;
   <li>Internet Explorer 11</li>
 </ul>
 
-<p>This is a base level of support which provides core content, functionality and base styling. Due to a lack of support for more advanced features and styling capabilities in these browsers, issues of an aesthetic nature are not typically addressed unless they directly interfere with the usability of the website. Any questions or concerns regarding this level of support can be communicated to the project's account team.</p>
+<p>This is a base level of support which provides core content, functionality and base styling. Due to a lack of support for more advanced features and styling capabilities in these browsers, issues of an aesthetic nature are not typically addressed unless they directly interfere with the usability of the website. Full support of this browser is by request only. Any questions or concerns regarding this level of support can be communicated to the project's account team.</p>
 
 <h3 id="update-log">Update Log</h3>
 
