--- a/a11y/index.html
+++ b/a11y/index.html
@@ -3,9 +3,9 @@ title: "Accessibility at Radancy"
 ---
 
 <ul>
-  <li><a href="https://amp.levelaccess.net/login.php">Level Access AMP</a></li>
+  <li><a href="audit">Radancy Testing/Audit Process</a></li>
   <li><a href="baseline">Radancy Accessibility Testing Baselines</a></li>
   <li><a href="extension">Radancy Accessibility Smoke Test Extension</a></li>
   <li><a href="testing/boilerplate">Radancy Testing Boilerplate</a></li>
-  <li><a href="/ui/code-standards/">Radancy User Interface Standards and Guidelines</a></li>
+  <li><a href="/uid/code-standards/">Radancy User Interface Standards and Guidelines</a></li>
 </ul>
