--- a/a11y/extension/thanks.html
+++ b/a11y/extension/thanks.html
@@ -24,6 +24,7 @@
     <ul>
       <li><a class="new-tab" href="https://pauljadam.com/bookmarklets.html">Paul J. Adams' Bookmarkets</a></li>
       <li><a class="new-tab" href="https://github.com/mraccess77/mraccess77.github.io/tree/master/favlets">Jonathan Avila's Favlets</a></li>
+      <li><a class="new-tab" href="https://www.twitter.com/stevefaulkner/">Steve Faulkner</a></li>
     </ul>
 
   </main>
