Extension updates, added Slick

--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -27,7 +27,7 @@
 
       <h2>Overview</h2>
 
-      <p>Web pages must always be validated. Errors in WAVE and HTML are the most critical issues to address. QA engineers should link directly to validation reports when logging issues.</p>
+      <p>Web pages must always be validated. Errors presented in WAVE and in HTML are the most critical issues to address. QA engineers should link directly to validation reports when logging issues.</p>
 
       <ul>
         <li><a class="validate-a11y new-tab" href="https://wave.webaim.org/">Validate Accessibility</a></li>
@@ -95,6 +95,7 @@
       <ul>
         <li><a class="new-tab" href="https://radancy.dev/a11y/caption/">Creating Accessible Multimedia</a></li>
         <li><a class="new-tab" href="https://meryl.net/captioned-videos-complete-guide/">The Complete Guide to Captioned Videos by Meryl Evans (April 9, 2019)</a></li>
+        <li><a class="new-tab" href="https://www.w3.org/WAI/media/av/">Making Audio and Video Media Accessible</a></li>
       </ul>
 
     </div>
@@ -511,7 +512,7 @@
 
       <h2>Advanced Testing</h2>
 
-      <p>More advanced tools can be used by specialized accessibility testers.</p>
+      <p>More advanced tools and resources for specialized accessibility testers.</p>
 
       <ul>
         <li><a class="new-tab" href="https://amp.levelaccess.net/login.php">Level Access AMP</a>
@@ -557,8 +558,9 @@
       <p>Fantastic resources from across the web!</p>
 
       <ul>
-        <li><a class="new-tab" href="https://www.w3.org/WAI/">Web Accessibility Initiative (WAI)</a></li>
+        <li><a class="new-tab" href="https://a11ysupport.io/">ARIA Support Check</a></li>
         <li><a class="new-tab" href="https://www.w3.org/WAI/WCAG21/quickref/">How to Meet WCAG (Quick Reference)</a></li>
+        <li><a class="new-tab" href="https://www.w3.org/WAI/">Web Accessibility Initiative (WAI)</a></li>
       </ul>
 
     </div>
