New Link, International A11y Policies

--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -561,6 +561,7 @@
         <li><a class="new-tab" href="https://a11ysupport.io/">ARIA Support Check</a></li>
         <li><a class="new-tab" href="https://www.w3.org/WAI/WCAG21/quickref/">How to Meet WCAG (Quick Reference)</a></li>
         <li><a class="new-tab" href="https://www.w3.org/WAI/">Web Accessibility Initiative (WAI)</a></li>
+        <li><a class="new-tab" href="https://www.w3.org/WAI/policies/">Web Accessibility Laws & Policie</a></li>
       </ul>
 
     </div>
