--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -43,7 +43,7 @@
 
               <button aria-describedby="wcag-parsing" data-script="https://radancy.dev/a11y/extension/local/wcag-parsing.js">WCAG Parsing</button>
 
-              <span id="wcag-parsing">Run on W3C validator results page to remove non-WCAG issues.</span>
+              <span id="wcag-parsing">Run on W3C validator results page to remove non-WCAG issues. Not all errors may affect accessibility.</span>
 
             </li>
           </ul>
