Various updates, image validation, new links, etc.

--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -19,7 +19,7 @@
 
   <main>
 
-    <h1 class="heading-small">Accessibility Smoke Test v1.0</h1>
+    <h1 class="heading-small">Accessibility Smoke Test v1.0.2</h1>
 
     <button class="disclosure--btn" data-disclosure-icon>Page Validation</button>
 
@@ -81,7 +81,7 @@
 
       <ul>
         <li><button data-script="https://rawgit.com/pauljadam/bookmarklets/master/images.js">View Alternative Text</button></li>
-        <li><button class="validate-images new-tab" data-script="images.html">View Page Images</button></li>
+        <li><a class="validate-images new-tab" href="images.html">View Page Images</a></li>
       </ul>
 
       <h2>Resources</h2>
