--- a/a11y/extension/index.html
+++ b/a11y/extension/index.html
@@ -151,7 +151,6 @@
       <h2>Resources</h2>
 
       <ul>
-        <li><a class="new-tab" href="https://radancy.dev/a11y/caption/">Radancy Process: Creating Accessible Multimedia</a></li>
         <li><a class="new-tab" href="https://meryl.net/captioned-videos-complete-guide/">The Complete Guide to Captioned Videos by Meryl Evans (April 9, 2019)</a></li>
         <li><a class="new-tab" href="https://www.w3.org/WAI/media/av/">Making Audio and Video Media Accessible</a></li>
       </ul>
@@ -650,6 +649,12 @@
               <li><a class="new-tab" href="https://amp.levelaccess.net/download/assistant.php?version=2&amp;browser=ie">Internet Explorer 11 Plugin</a></li>
             </ul>
 
+            <h2>Continuum Explorer Pro</h2>
+
+            <ul>
+              <li><a class="new=tab" href="https://chrome.google.com/webstore/detail/continuum-explorer-pro/pgkgokkkoamjdmbnegbedepbhbgecplj?hl=en-US">Chrome Extension</a></li>
+            </ul>
+
             <h2>Accessible Color Tools</h2>
 
             <ul>
@@ -682,6 +687,7 @@
       <p>Fantastic resources from across the web!</p>
 
       <ul>
+        <li><a class="new-tab" href="https://a11y-tools.com/">A11y Tools</a></li>
         <li><a class="new-tab" href="https://a11ysupport.io/">ARIA Support Check</a></li>
         <li><a class="new-tab" href="https://www.w3.org/WAI/WCAG21/quickref/">How to Meet WCAG (Quick Reference)</a></li>
         <li><a class="new-tab" href="https://www.powermapper.com/tests/screen-readers/">PowerMapper - Screen Reader Reliability</a></li>
