--- a/a11y/audit/index.html
+++ b/a11y/audit/index.html
@@ -15,7 +15,7 @@ layout: null
 
   <main>
 
-    <a href="https://tmpww.sharepoint.com/:w:/s/intranet/offering/EQ04XlXswB5BhkPnI7PWZhsBz_UZ1-aJH7XMZJIEYwy-wQ?e=3uJGga">Accessibility Audit</a>
+    <a href="https://tmpww.sharepoint.com/:w:/s/intranet/offering/EQ04XlXswB5BhkPnI7PWZhsBz_UZ1-aJH7XMZJIEYwy-wQ?e=3uJGga">Accessibility Audit (Link will redirect)</a>
 
   </main>
 
