--- a/a11y/caption/index.html
+++ b/a11y/caption/index.html
@@ -15,7 +15,7 @@ layout: null
 
   <main>
 
-    <a href="https://tmpww.sharepoint.com/sites/delivery/SitePages/Creating%20Accessible%20Multimedia.aspx">Creating Accessible Multimedia</a>
+    <a href="https://tmpww.sharepoint.com/sites/delivery/SitePages/Creating%20Accessible%20Multimedia.aspx">Creating Accessible Multimedia (Link will redirect)</a>
 
   </main>
 
